JVM GC 방식 수정